CORS error fixed styled scrollbar layout bug with search bar fixed

--- a/src/app/search-result/search-result.component.css
+++ b/src/app/search-result/search-result.component.css
@@ -42,7 +42,7 @@
   flex-direction: column;
   margin-top: 30px;
   max-width: 500px;
-  overflow: scroll;
+  overflow-X: scroll;
 
 }
 
@@ -54,4 +54,27 @@
   margin: 1em 0;
   margin-right: 10px;
   float: left;
+}
+
+::-webkit-scrollbar {
+  width: 12px; 
+  height: 12px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #555; 
+  border-radius: 6px; 
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #9d9a9a; 
+}
+
+::-webkit-scrollbar-track {
+  background: transparent; 
+  border-radius: 6px; 
+}
+
+::-webkit-scrollbar-track:hover {
+  background: transparent; 
 }
